# NeuralNet

./: .gitignore  README.md  temp.md
neuralnet/: main.py  neural_network.py
neuralnet/app/: engine.rs  play.rs
neuralnet/gui/: backendMocks.py  main.py  utils.py
neuralnet/gui/images/: main.py
tools/: Cargo.toml  pyproject.toml
tools/src/: ai.rs  architect.rs  engine.rs  errors.rs  files.rs  generation.rs  lib.rs  neural_network.rs  test.rs
tools/tools/: __init__.py  tools.pyi
