[package]
name = "tools"
description = "Tools implemented in Rust to speed up computation."
repository = "https://github.com/genomicals/neuralnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tools"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.6"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rand = "0.8.5"


